Project has been rebuilt and restructured

--- a/JuegoRestaurante/src/main/resources/Restaurante/MainMenu.fxml
+++ b/JuegoRestaurante/src/main/resources/Restaurante/MainMenu.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="bodybg" stylesheets="@../recursos/stilo.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Restaurante.MainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="bodybg" stylesheets="@../recursos/stilo.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Restaurante.MainMenuController">
    <top>
       <Label text="MI CAFETERIA" textFill="WHITE" BorderPane.alignment="CENTER">
          <font>
@@ -41,7 +41,7 @@
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
                <children>
                   <TextField fx:id="txtUsuario" prefHeight="29.0" prefWidth="206.0" />
-                  <TextField fx:id="txtContrasena" />
+                  <PasswordField fx:id="txtContrasena" />
                </children>
             </VBox>
             <Button fx:id="btnJugar" mnemonicParsing="false" prefHeight="99.0" prefWidth="199.0" text="JUGAR">
